install xquart with brew

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -8,18 +8,25 @@ name: renderbook
 
 jobs:
   bookdown:
+    
     name: Render-Book
+    
     runs-on: macOS-latest
+    
     steps:
       - uses: actions/checkout@v1
+      
       - uses: r-lib/actions/setup-r@v1
+      
       - uses: r-lib/actions/setup-pandoc@v1
+      
       - name: Install docker
         run: |
           brew install docker-machine docker
+          
       - name: Install xquartz
         run: |
-          brew cask install xquartz
+          brew install xquartz
       - name: Install sysfonts
         run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
       - name: Install rmarkdown
