--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -26,7 +26,7 @@ jobs:
           
       - name: Install xquartz
         run: |
-          brew install xquartz
+          brew cask install xquartz
       - name: Install sysfonts
         run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
       - name: Install rmarkdown
