switched to rendering on ubuntu

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -11,7 +11,7 @@ jobs:
     
     name: Render-Book
     
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
     
     steps:
       - uses: actions/checkout@v1
@@ -20,13 +20,9 @@ jobs:
       
       - uses: r-lib/actions/setup-pandoc@v1
       
-      - name: Install docker
-        run: |
-          brew install docker-machine docker
-          
-      - name: Install xquartz
-        run: |
-          brew cask install xquartz
+      - name: Install tinytex
+        uses: r-lib/actions/setup-tinytex@master
+      
       - name: Install sysfonts
         run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
       - name: Install rmarkdown
