now with sysreq

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install tinytex
         uses: r-lib/actions/setup-tinytex@master
       
+      - name: Install sysreq
+        run: apt-get update && apt-get install -y  gdal-bin git-core libcairo2-dev libcurl4-openssl-dev libgdal-dev libgeos-dev libgeos++-dev libgit2-dev libpng-dev libssh2-1-dev libssl-dev libudunits2-dev libxml2-dev make pandoc pandoc-citeproc zlib1g-dev
+        
       - name: Install sysfonts
         run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
       - name: Install rmarkdown
