--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -24,13 +24,7 @@ jobs:
         uses: r-lib/actions/setup-tinytex@master
       
       - name: Install sysreq
-        run: sudo apt update && \
-        sudo apt install -y  \
-        gdal-bin git-core libcairo2-dev \
-        libcurl4-openssl-dev libgdal-dev libgeos-dev \
-        libgeos++-dev libgit2-dev libpng-dev libssh2-1-dev \
-        libssl-dev libudunits2-dev libxml2-dev make pandoc \
-        pandoc-citeproc zlib1g-dev
+        run: sudo apt update && sudo apt install -y gdal-bin git-core libcairo2-dev libcurl4-openssl-dev libgdal-dev libgeos-dev libgeos++-dev libgit2-dev libpng-dev libssh2-1-dev libssl-dev libudunits2-dev libxml2-dev make pandoc pandoc-citeproc zlib1g-dev
         
       - name: Install sysfonts
         run: Rscript -e 'install.packages("sysfonts", Ncpus = 4)'
