added roxyen2 as dep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -117,8 +117,9 @@ Imports:
     readxl,
     R.cache,
     glouton (>= 0.0.0.9000),
-    bubble (>= 0.0.0.9003)
-Remotes:  
+    bubble (>= 0.0.0.9003),
+    roxygen2
+Remotes: 
     ColinFay/tidytuesday201942,
     ColinFay/dockerstats,
     ColinFay/crrry,
