added covrpage in dep

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -118,8 +118,9 @@ Imports:
     R.cache,
     glouton (>= 0.0.0.9000),
     bubble (>= 0.0.0.9003),
-    roxygen2
-Remotes: 
+    roxygen2,
+    covrpage (>= 0.0.70)
+Remotes:  
     ColinFay/tidytuesday201942,
     ColinFay/dockerstats,
     ColinFay/crrry,
@@ -137,7 +138,8 @@ Remotes:
     colinfay/glouton,
     colinfay/bubble,
     colinfay/hexmake,
-    colinfay/resume
+    colinfay/resume,
+    metrumresearchgroup/covrpage
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
