--- a/_output.yml
+++ b/_output.yml
@@ -1,9 +1,9 @@
 bookdown::gitbook:
   css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
-  toc_depth: 1
+  toc_depth: 3
   config:
     toc:
-      collapse: none
+      collapse: section
       before: |
         <li><a href="./">Engineering Production-Grade Shiny Apps</a></li>
       after: |
