--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -16,6 +16,8 @@ jobs:
       - uses: actions/checkout@v1
       
       - uses: r-lib/actions/setup-r@v1
+        with:
+          crayon.enabled: 'FALSE'
       
       - uses: r-lib/actions/setup-pandoc@v1
       
