series of updates after re-reading

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,7 @@ Authors@R:
       person(given = "ThinkR",
              role = "cph"))
 Description: Open source book on R for reproducible, robust and
-    maintanable Shiny applications for production.
+    maintainable Shiny applications for production.
 License: MIT + file LICENSE
 Depends: 
     bookdown
@@ -120,7 +120,7 @@ Imports:
     bubble (>= 0.0.0.9003),
     roxygen2,
     covrpage (>= 0.0.70)
-Remotes:  
+Remotes: 
     ColinFay/tidytuesday201942,
     ColinFay/dockerstats,
     ColinFay/crrry,
@@ -144,3 +144,6 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
 BugReports: https://github.com/ThinkR-open/building-shiny-apps-workflow/issues
+Suggests: 
+    spelling
+Language: en-US
