--- a/esb-docker/Dockerfile
+++ b/esb-docker/Dockerfile
@@ -32,12 +32,11 @@ RUN Rscript -e 'remotes::install_version("readr",upgrade="never", version = "1.3
 RUN Rscript -e 'remotes::install_version("remotes",upgrade="never", version = "2.1.1")'
 RUN Rscript -e 'remotes::install_version("RSQLite",upgrade="never", version = "2.2.0")'
 RUN Rscript -e 'remotes::install_version("shiny",upgrade="never", version = "1.4.0.2")'
-RUN Rscript -e 'remotes::install_version("tibble",upgrade="never", version = "3.0.0")'
+RUN Rscript -e 'remotes::install_version("tibble", version = "3.0.0")'
 RUN Rscript -e 'remotes::install_version("tictoc",upgrade="never", version = "1.0")'
 RUN Rscript -e 'remotes::install_version("viridis",upgrade="never", version = "0.5.1")'
 RUN Rscript -e 'remotes::install_version("rmarkdown",upgrade="never", version = "2.1")'
 RUN Rscript -e 'remotes::install_version("DT",upgrade="never", version = "0.13")'
-RUN Rscript -e 'remotes::install_version("crrry",upgrade="never", version = "0.0.0.9000")'
 RUN Rscript -e 'remotes::install_version("httpuv",upgrade="never", version = "1.5.2")'
 RUN Rscript -e 'remotes::install_version("pagedown",upgrade="never", version = "0.9")'
 RUN Rscript -e 'remotes::install_version("shinyloadtest",upgrade="never", version = "1.0.1")'
@@ -60,6 +59,7 @@ RUN Rscript -e 'remotes::install_github("r-lib/liteq@f7968687c63e1343503bf4c8828
 RUN Rscript -e 'remotes::install_github("Thinkr-open/shinipsum@42f6171f3b0dfd374e9daeba305f27bd049b569e")'
 RUN Rscript -e 'remotes::install_github("Thinkr-open/fakir@2fc362155388c9d995387d48dbfc060a7b39d382")'
 RUN Rscript -e 'remotes::install_github("colinfay/dockerstats@66ddd53792cdaac04507f2c0a036b02aa257194e")'
+RUN Rscript -e 'remotes::install_github("colinfay/crrry")'
 RUN Rscript -e 'remotes::install_github("r-lib/usethis@362ef0ef9483cd0b948b80590985ebb085c1f8bd")'
 RUN Rscript -e 'remotes::install_github("r-lib/lifecycle@355dcba8530bcce57c15847165ca568f9f81b43e")'
 RUN Rscript -e 'remotes::install_github("r-lib/fastmap@61c609993a40b8101b141b2c940bf8ccbaef4dfa")'
