last re-reading, sent for technical review

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -46,9 +46,9 @@ jobs:
       
       - name: Befor build
         run: Rscript before-build.R
-      
-      - name: Install local deps
-        run: Rscript -e 'install.packages("remotes", Ncpus = 4);remotes::install_local(upgrade = "never", Ncpus = 4)'
+        env:
+          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
+          GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
       
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
