chunck renaming + trying action on wip only

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,122 +28,123 @@ Authors@R:
 Description: Open source book on R for reproducible, robust and
     maintainable Shiny applications for production.
 License: MIT + file LICENSE
+URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
+BugReports: 
+    https://github.com/ThinkR-open/building-shiny-apps-workflow/issues
 Depends: 
     bookdown
 Imports: 
     attachment,
+    attempt,
     bench,
+    bs4Dash,
+    bubble (>= 0.0.0.9003),
+    chromote (>= 0.0.0.9001),
     cli,
     cloc (>= 0.3.0),
+    config,
+    covrpage (>= 0.0.70),
+    crrri (>= 0.0.12),
+    crrry,
     cyclocomp,
+    data.table,
     DBI,
+    dbplyr,
     desc,
     devtools,
     dichromat,
+    dockerfiler,
+    dockerstats (>= 0.0.0.9000),
     dplyr,
+    DT,
+    fakir (>= 0.2.0),
     fs,
+    fullPage (>= 0.1.0),
     future,
-    ggplot2,
+    gargoyle (>= 0.0.0.9000),
+    geojsonsf,
     ggbeeswarm,
+    ggplot2,
+    git2r,
+    glouton (>= 0.0.0.9000),
     glue,
     golem,
     here,
+    hexmake (>= 0.0.0.9000),
     htmltools,
+    httpuv,
+    jsonlite,
     knitr,
+    liteq,
     lubridate,
     magrittr,
     matlab,
     memoise,
+    namer,
+    nessy (>= 0.0.0.9001),
     packageMetrics2 (>= 1.0.1.9000),
+    pagedown,
+    pkgbuild,
+    plotly,
+    processx,
     profmem,
+    profvis,
+    promises,
     purrr,
+    R.cache,
     Rcpp,
     readr,
+    readxl,
     remotes,
+    renv,
+    resume (>= 0.0.0.9000),
+    rmarkdown,
+    roxygen2,
+    rsconnect,
     RSQLite,
+    rstudioapi,
+    scales,
+    sf,
+    shinipsum (>= 0.0.0.9000),
     shiny,
+    shinyalert,
+    shinydashboardPlus,
+    shinyloadtest,
+    shinyMobile,
+    shinytest,
+    skeleton (>= 0.0.0.9000),
+    testthat,
     tibble,
     tictoc,
     tidytuesday201942 (>= 0.0.0.9000),
-    tools (>= 3.6.1),
-    viridis,
-    liteq,
-    shinipsum (>= 0.0.0.9000),
-    rmarkdown,
-    DT,
-    fakir (>= 0.2.0),
-    crrry,
-    httpuv,
-    pagedown,
-    shinyloadtest,
-    dockerstats (>= 0.0.0.9000),
-    scales,
-    dockerfiler,
-    jsonlite,
-    namer,
-    renv,
-    attempt,
-    rstudioapi,
-    usethis,
-    xfun,
-    config,
-    git2r,
-    rsconnect,
-    promises,
-    testthat,
-    hexmake (>= 0.0.0.9000),
-    shinyalert,
-    plotly,
-    shinyMobile,
-    resume (>= 0.0.0.9000),
-    nessy (>= 0.0.0.9001),
-    skeleton (>= 0.0.0.9000),
-    fullPage (>= 0.1.0),
-    bs4Dash,
-    shinydashboardPlus,
-    sf,
-    crrri (>= 0.0.12),
-    chromote (>= 0.0.0.9001),
     tidyverse,
-    shinytest,
-    processx,
-    geojsonsf,
-    pkgbuild,
-    profvis,
-    gargoyle (>= 0.0.0.9000),
-    dbplyr,
+    tools (>= 3.6.1),
+    usethis,
+    viridis,
     vroom,
-    data.table,
-    readxl,
-    R.cache,
-    glouton (>= 0.0.0.9000),
-    bubble (>= 0.0.0.9003),
-    roxygen2,
-    covrpage (>= 0.0.70)
+    xfun
+Suggests: 
+    spelling
 Remotes: 
-    ColinFay/tidytuesday201942,
-    ColinFay/dockerstats,
+    colinfay/bubble,
     ColinFay/crrry,
+    ColinFay/dockerstats,
+    ColinFay/gargoyle,
+    colinfay/glouton,
+    colinfay/hexmake,
+    ColinFay/nessy,
+    colinfay/resume,
+    colinfay/skeleton,
+    ColinFay/tidytuesday201942,
     hrbrmstr/cloc,
     MangoTheCat/packageMetrics2,
-    ThinkR-open/fakir,
-    ThinkR-open/golem,
-    Thinkr-open/shinipsum,
-    ColinFay/nessy,
-    colinfay/skeleton,
+    metrumresearchgroup/covrpage,
     RinteRface/fullPage,
     RLesur/crrri,
     rstudio/chromote,
-    ColinFay/gargoyle,
-    colinfay/glouton,
-    colinfay/bubble,
-    colinfay/hexmake,
-    colinfay/resume,
-    metrumresearchgroup/covrpage
+    ThinkR-open/fakir,
+    ThinkR-open/golem,
+    Thinkr-open/shinipsum
 Encoding: UTF-8
-LazyData: true
-URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
-BugReports: https://github.com/ThinkR-open/building-shiny-apps-workflow/issues
-Suggests: 
-    spelling
 Language: en-US
+LazyData: true
