--- a/.github/workflows/deploy_bookdown_wip.yml
+++ b/.github/workflows/deploy_bookdown_wip.yml
@@ -1,7 +1,7 @@
 on:
   push:
      branches:
-       - master
+       - wip
 
 name: renderbook
 
@@ -41,12 +41,6 @@ jobs:
       - name: Install rmarkdown, bookdown and sysfonts
         run: Rscript -e 'install.packages(c("sysfonts", "rmarkdown","bookdown"), Ncpus = 4)'
       
-      - name: Spell check
-        run: Rscript before-build-spellcheck.R
-        env:
-          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
-          GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-      
       - name: Before build
         run: Rscript before-build.R
           
@@ -81,6 +75,6 @@ jobs:
           CNAME: engineering-shiny.org
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: _book/                     # "_site/" by default
+          BUILD_DIR: _book/wip            
     
  
