trying to cache package

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -18,7 +18,14 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           crayon.enabled: 'FALSE'
-      
+          
+      - uses: actions/cache@v1
+        with:
+        path: ~/.local/share/renv
+        key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-renv-
+          
       - uses: r-lib/actions/setup-pandoc@v1
       
       - name: Install tinytex
