_book/wip in GA yaml

--- a/.github/workflows/deploy_bookdown_wip.yml
+++ b/.github/workflows/deploy_bookdown_wip.yml
@@ -75,13 +75,13 @@ jobs:
          # Artifact name
          name: _book # optional
          # Destination path
-         path: _book # optional
+         path: _book/wip # optional
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@master
        env:
           CNAME: engineering-shiny.org
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: _book/wip            
+          BUILD_DIR: _book            
     
  
