test wip artifact

--- a/.github/workflows/deploy_bookdown_wip.yml
+++ b/.github/workflows/deploy_bookdown_wip.yml
@@ -56,7 +56,7 @@ jobs:
       
       - uses: actions/upload-artifact@v1
         with:
-          name: _book
+          name: _book/wip
           path: _book/
   
 # Need to first create an empty gh-pages branch
@@ -73,7 +73,7 @@ jobs:
        uses: actions/download-artifact@v1.0.0
        with:
          # Artifact name
-         name: _book # optional
+         name: _book/wip # optional
          # Destination path
          path: _book/wip # optional
      - name: Deploy to GitHub Pages
@@ -82,6 +82,6 @@ jobs:
           CNAME: engineering-shiny.org
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: _book            
+          BUILD_DIR: _book/wip            
     
  
