render book in "_book/wip"

--- a/.github/workflows/deploy_bookdown_wip.yml
+++ b/.github/workflows/deploy_bookdown_wip.yml
@@ -52,11 +52,11 @@ jobs:
         run: Rscript before-build.R
           
       - name: Render Book
-        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+        run: Rscript -e 'bookdown::render_book("index.Rmd", output_dir = "_book/wip")'
       
       - uses: actions/upload-artifact@v1
         with:
-          name: _book/wip
+          name: _book
           path: _book/
   
 # Need to first create an empty gh-pages branch
