correction in artifact name

--- a/.github/workflows/deploy_bookdown_wip.yml
+++ b/.github/workflows/deploy_bookdown_wip.yml
@@ -73,15 +73,15 @@ jobs:
        uses: actions/download-artifact@v1.0.0
        with:
          # Artifact name
-         name: _book/wip # optional
+         name: _book # optional
          # Destination path
-         path: _book/wip # optional
+         path: _book # optional
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@master
        env:
           CNAME: engineering-shiny.org
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: _book/wip            
+          BUILD_DIR: _book            
     
  
