content about minification

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -122,10 +122,11 @@ Imports:
     usethis,
     viridis,
     vroom,
-    xfun
+    xfun,
+    minifyr (>= 0.0.0.9000)
 Suggests: 
     spelling
-Remotes: 
+Remotes:  
     colinfay/bubble,
     ColinFay/crrry,
     ColinFay/dockerstats,
@@ -144,7 +145,8 @@ Remotes:
     rstudio/chromote,
     ThinkR-open/fakir,
     ThinkR-open/golem,
-    Thinkr-open/shinipsum
+    Thinkr-open/shinipsum,
+    Colinfay/minifyr
 Encoding: UTF-8
 Language: en-US
 LazyData: true
