strict version of packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,109 +32,109 @@ URL: https://github.com/ThinkR-open/building-shiny-apps-workflow
 BugReports: 
     https://github.com/ThinkR-open/building-shiny-apps-workflow/issues
 Depends: 
-    bookdown
+    bookdown (>= 0.18)
 Imports: 
-    attachment,
-    attempt,
-    bench,
-    bs4Dash,
+    attachment (>= 0.1.0),
+    attempt (>= 0.3.1),
+    bench (>= 1.1.1),
+    bs4Dash (>= 0.5.0),
     bubble (>= 0.0.0.9003),
     chromote (>= 0.0.0.9001),
-    cli,
+    cli (>= 2.0.2),
     cloc (>= 0.3.0),
-    config,
+    config (>= 0.3),
     covrpage (>= 0.0.70),
     crrri (>= 0.0.12),
-    crrry,
-    cyclocomp,
-    data.table,
-    DBI,
-    dbplyr,
-    desc,
-    devtools,
-    dichromat,
-    dockerfiler,
+    crrry (>= 0.0.0.9001),
+    cyclocomp (>= 1.1.0),
+    data.table (>= 1.12.8),
+    DBI (>= 1.1.0),
+    dbplyr (>= 1.4.3),
+    desc (>= 1.2.0),
+    devtools (>= 2.3.0),
+    dichromat (>= 2.0.0),
+    dockerfiler (>= 0.1.3),
     dockerstats (>= 0.0.0.9000),
-    dplyr,
-    DT,
+    dplyr (>= 1.0.2),
+    DT (>= 0.15),
     fakir (>= 0.2.0),
-    fs,
+    fs (>= 1.4.1),
     fullPage (>= 0.1.0),
-    future,
+    future (>= 1.17.0),
     gargoyle (>= 0.0.0.9000),
-    geojsonsf,
-    ggbeeswarm,
-    ggplot2,
-    git2r,
+    geojsonsf (>= 1.3.3),
+    ggbeeswarm (>= 0.6.0),
+    ggplot2 (>= 3.3.0),
+    git2r (>= 0.27.1),
     glouton (>= 0.0.0.9000),
-    glue,
-    golem,
-    here,
+    glue (>= 1.4.2),
+    golem (>= 0.3.0),
+    here (>= 0.1),
     hexmake (>= 0.0.0.9000),
-    htmltools,
-    httpuv,
-    jsonlite,
-    knitr,
-    liteq,
-    lubridate,
-    magrittr,
-    matlab,
-    memoise,
+    htmltools (>= 0.5.0.9002),
+    httpuv (>= 1.5.4),
+    jsonlite (>= 1.7.1),
+    knitr (>= 1.30),
+    liteq (>= 1.1.0),
+    lubridate (>= 1.7.8),
+    magrittr (>= 1.5),
+    matlab (>= 1.0.2),
+    memoise (>= 1.1.0.9000),
     minifyr (>= 0.0.0.9000),
-    namer,
+    namer (>= 0.1.5),
     nessy (>= 0.0.0.9001),
     packageMetrics2 (>= 1.0.1.9000),
-    pagedown,
-    pkgbuild,
-    plotly,
-    processx,
-    profmem,
-    profvis,
-    promises,
-    purrr,
-    R.cache,
-    Rcpp,
-    readr,
-    readxl,
-    remotes,
-    renv,
+    pagedown (>= 0.10),
+    pkgbuild (>= 1.0.8),
+    plotly (>= 4.9.2.1),
+    processx (>= 3.4.4),
+    profmem (>= 0.5.0),
+    profvis (>= 0.3.6),
+    promises (>= 1.1.1),
+    purrr (>= 0.3.4),
+    R.cache (>= 0.14.0),
+    Rcpp (>= 1.0.5),
+    readr (>= 1.3.1),
+    readxl (>= 1.3.1),
+    remotes (>= 2.2.0),
+    renv (>= 0.12.2),
     resume (>= 0.0.0.9000),
-    rmarkdown,
-    roxygen2,
-    rsconnect,
-    RSQLite,
-    rstudioapi,
-    scales,
+    rmarkdown (>= 2.5),
+    roxygen2 (>= 7.1.0),
+    rsconnect (>= 0.8.16),
+    RSQLite (>= 2.2.0),
+    rstudioapi (>= 0.11),
+    scales (>= 1.1.0),
     sever (>= 0.0.4),
-    sf,
+    sf (>= 0.9.3),
     shinipsum (>= 0.0.0.9000),
-    shiny,
-    shinyalert,
-    shinydashboardPlus,
-    shinyloadtest,
-    shinyMobile,
-    shinytest,
+    shiny (>= 1.5.0),
+    shinyalert (>= 1.1),
+    shinydashboardPlus (>= 0.7.0),
+    shinyloadtest (>= 1.0.1),
+    shinyMobile (>= 0.1.0),
+    shinytest (>= 1.3.1),
     skeleton (>= 0.0.0.9000),
-    testthat,
-    tibble,
-    tictoc,
+    testthat (>= 3.0.0),
+    tibble (>= 3.0.1),
+    tictoc (>= 1.0),
     tidytuesday201942 (>= 0.0.0.9000),
-    tidyverse,
+    tidyverse (>= 1.3.0),
     tools (>= 3.6.1),
-    usethis,
-    viridis,
-    vroom,
-    xfun,
-    shinyFeedback,
-    covr,
-    rcmdcheck,
-    dccvalidator,
-    whereami,
-    RcppSimdJson,
+    usethis (>= 1.6.3),
+    viridis (>= 0.5.1),
+    vroom (>= 1.2.0),
+    xfun (>= 0.19),
+    shinyFeedback (>= 0.2.0),
+    covr (>= 3.5.0),
+    rcmdcheck (>= 1.3.3),
+    dccvalidator (>= 0.2.0),
+    whereami (>= 0.1.9),
+    RcppSimdJson (>= 0.1.0),
     foreign,
-    haven
+    haven (>= 2.2.0)
 Suggests: 
-    spelling
+    spelling (>= 2.1)
 Remotes: 
     colinfay/bubble,
     ColinFay/crrry,
