--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,9 +76,9 @@ Imports:
     here (>= 0.1),
     hexmake (>= 0.0.0.9000),
     htmltools (>= 0.5.0.9002),
-    htmlwidgets,
+    htmlwidgets (>= 1.5.2),
     httpuv (>= 1.5.4),
-    hunspell,
+    hunspell (>= 3.0),
     jsonlite (>= 1.7.1),
     knitr (>= 1.30),
     liteq (>= 1.1.0),
@@ -107,7 +107,7 @@ Imports:
     remotes (>= 2.2.0),
     renv (>= 0.12.2),
     resume (>= 0.0.0.9000),
-    rhub,
+    rhub (>= 1.1.1),
     rmarkdown (>= 2.5),
     roxygen2 (>= 7.1.0),
     rsconnect (>= 0.8.16),
@@ -121,7 +121,7 @@ Imports:
     shinyalert (>= 1.1),
     shinydashboardPlus (>= 0.7.0),
     shinyFeedback (>= 0.2.0),
-    shinyjs,
+    shinyjs (>= 1.1),
     shinyloadtest (>= 1.0.1),
     shinyMobile (>= 0.1.0),
     shinytest (>= 1.3.1),
@@ -129,20 +129,20 @@ Imports:
     testthat (>= 3.0.0),
     tibble (>= 3.0.1),
     tictoc (>= 1.0),
+    tidymodules (>= 0.1.1),
     tidytuesday201942 (>= 0.0.0.9000),
     tidyverse (>= 1.3.0),
     tools (>= 3.6.1),
-    tufte,
+    tufte (>= 0.7),
     usethis (>= 1.6.3),
-    uuid,
+    uuid (>= 0.1.4),
     viridis (>= 0.5.1),
     vroom (>= 1.2.0),
     whereami (>= 0.1.9),
-    xfun (>= 0.19),
-    tidymodules (>= 0.1.1)
+    xfun (>= 0.19)
 Suggests: 
     spelling (>= 2.1)
-Remotes:  
+Remotes: 
     colinfay/bubble,
     ColinFay/crrry,
     ColinFay/dockerstats,
@@ -157,13 +157,13 @@ Remotes:
     hrbrmstr/cloc,
     MangoTheCat/packageMetrics2,
     metrumresearchgroup/covrpage,
+    Novartis/tidymodules,
     RinteRface/fullPage,
     RLesur/crrri,
     rstudio/chromote,
     ThinkR-open/fakir,
     ThinkR-open/golem,
-    Thinkr-open/shinipsum,
-    Novartis/tidymodules
+    Thinkr-open/shinipsum
 Encoding: UTF-8
 Language: en-US
 LazyData: true
