--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -55,7 +55,7 @@ jobs:
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
       
       - name: Before build
-        run: Rscript -e 'renv::restore();remotes::install_local(Ncpus = 4, upgrade = "never", force = TRUE)'
+        run: Rscript prep.R
           
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
