--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -58,7 +58,7 @@ jobs:
         run: Rscript prep.R
           
       - name: Render Book
-        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+        run: docker pull colinfay/hexmake && Rscript -e 'bookdown::render_book("index.Rmd")'
       
       - uses: actions/upload-artifact@v1
         with:
