--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -59,6 +59,9 @@ jobs:
           
       - name: Render Book
         run: docker pull colinfay/hexmake && Rscript -e 'bookdown::render_book("index.Rmd")'
+          
+      - name: Build redirect
+        run: Rscript redirect.R
       
       - uses: actions/upload-artifact@v1
         with:
