--- a/_output.yml
+++ b/_output.yml
@@ -34,3 +34,5 @@ bookdown::pdf_book:
   quote_footer: ["\\VA{", "}{}"]
 bookdown::epub_book:
   stylesheet: css/style.css
+redirects:
+  deploy-golem: deploy
