tried with the new Cecilapp/GitHub-Pages-deploy@v3

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -86,11 +86,14 @@ jobs:
          # Destination path
          path: _site # optional
      - name: Deploy to GitHub Pages
-       uses: Cecilapp/GitHub-Pages-deploy@master
+       uses: Cecilapp/GitHub-Pages-deploy@v3
        env:
-          CNAME: engineering-shiny.org
-          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
-          GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-          BUILD_DIR: _site/                     # "_site/" by default
+         GITHUB_TOKEN: ${{ secrets.TOKEN }}
+       with:
+         email: ${{ secrets.EMAIL }} 
+         build_dir: _site  # optional
+         cname: engineering-shiny.org # optional
+         jekyll: no        # optional
+
     
  
