--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -26,7 +26,7 @@ rmd_files:
 - 10-step-by-step-build.Rmd
 - 11-step-by-step-secure.Rmd
 - 12-secure.Rmd
-- 13-deploy-with-golem.Rmd
+- 13-deploy.Rmd
 - 14-when_optimize.Rmd
 - 15-common-app-caveats.Rmd
 - 16-optimizing-shiny-code.Rmd
