--- a/_output.yml
+++ b/_output.yml
@@ -35,4 +35,17 @@ bookdown::pdf_book:
 bookdown::epub_book:
   stylesheet: css/style.css
 redirects:
+  successfulshinyapp: successful-shiny-app
+  planning: planning-ahead
+  structure: structuring-project
+  matters: ux-matters
+  step-design: dont-rush-into-coding
+  settingupsuccess: setting-up-for-success
+  stepprotopype: building-ispum-app
+  stepbuild: build-app-golem
+  step-secure: build-yourself-safety-net
+  secure: version-control
   deploy-golem: deploy
+  when-optimize: need-for-optimization
+  optim-caveat: common-app-caveats
+  optimjs: using-javascript
