--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ library/
 rstudio_prefs
 building-shiny-apps-workflow*
 !building-shiny-apps-workflow.Rproj
-
+_book/*
 !engineering-production-grade-shiny-apps.Rproj
 golex/
 todoedit
