--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -37,13 +37,7 @@ jobs:
       - name: Pulling hexmake
         run: docker pull colinfay/hexmake
         
-      - name: Install Chromium
-        run: |
-          sudo apt-get update
-          sudo apt-get install software-properties-common
-          sudo add-apt-repository ppa:canonical-chromium-builds/stage
-          sudo apt-get update
-          sudo apt-get install chromium-browser 
+      - uses: nanasess/setup-chromedriver@master
 
       - name: Install rmarkdown, bookdown and sysfonts
         run: Rscript -e 'install.packages(c("sysfonts", "rmarkdown","bookdown"), Ncpus = 4)'
