--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
         with:
           crayon.enabled: 'FALSE'
+          r-version: '3.6.1'
           
       - uses: actions/cache@v1
         with:
