code chunk checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,6 +36,7 @@ Depends:
 Imports: 
     attachment (>= 0.1.0),
     attempt (>= 0.3.1),
+    bank (>= 0.0.0.9000),
     bench (>= 1.1.1),
     bs4Dash (>= 0.5.0),
     bubble (>= 0.0.0.9003),
@@ -161,6 +162,7 @@ Remotes:
     RinteRface/fullPage,
     RLesur/crrri,
     rstudio/chromote,
+    thinkr-open/bank,
     ThinkR-open/fakir,
     ThinkR-open/golem,
     Thinkr-open/shinipsum
