New look with bs4_book

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,7 @@
 book_filename: engineering-production-grade-shiny-apps
 clean: [packages.bib, bookdown.bbl]
 delete_merged_file: yes
+repo: https://github.com/ThinkR-open/engineering-shiny-book
 language:
   label:
     fig: "FIGURE "
