--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,5 @@
-bookdown::gitbook:
-  css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
+bookdown::bs4_book:
+  css: [css/style.css, css/style_gitbook.css]
   toc_depth: 3
   config:
     toc:
@@ -17,6 +17,11 @@ bookdown::gitbook:
   includes:
     in_header: ga.html      
     after_body: gitbook-footer-thinkr.html
+  theme:
+    primary: "#DE633C"
+    fg: "#2b2121"
+    bg: "#ffffff"
+  repo: https://github.com/ThinkR-open/engineering-shiny-book
 bookdown::pdf_book:
   includes:
     in_header: latex/preamble.tex
