GA artifact and no install_local

--- a/.github/workflows/build_bookdown_pr.yml
+++ b/.github/workflows/build_bookdown_pr.yml
@@ -48,3 +48,8 @@ jobs:
           
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
+        
+      - uses: actions/upload-artifact@v2
+        with:
+          name: _site
+          path: _site/
