golex without deps

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,7 @@ Imports:
     bank (>= 0.0.0.9000),
     bench (>= 1.1.1),
     bs4Dash (>= 0.5.0),
-    bslib,
+    bslib (>= 0.2.5.1),
     bubble (>= 0.0.0.9003),
     chromote (>= 0.0.0.9001),
     cli (>= 2.0.2),
@@ -59,7 +59,7 @@ Imports:
     dichromat (>= 2.0.0),
     dockerfiler (>= 0.1.3),
     dockerstats (>= 0.0.0.9000),
-    downlit,
+    downlit (>= 0.2.1),
     dplyr (>= 1.0.2),
     DT (>= 0.15),
     fakir (>= 0.2.0),
