put back deps and set github_pat

--- a/.github/workflows/build_bookdown_pr.yml
+++ b/.github/workflows/build_bookdown_pr.yml
@@ -45,10 +45,14 @@ jobs:
 
       - name: Before build
         run: Rscript prep.R
+        env: 
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
           
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-        
+        env: 
+          GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+          
       - uses: actions/upload-artifact@v2
         with:
           name: _site
