Add Github_pat to deploy_bookdown Action

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -3,6 +3,9 @@ on:
      branches:
        - master
 
+env: 
+  GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+  
 name: renderbook
 
 jobs:
@@ -53,7 +56,7 @@ jobs:
         run: Rscript prep.R
           
       - name: Render Book
-        run: docker pull colinfay/hexmake && Rscript -e 'bookdown::render_book("index.Rmd")'
+        run: Rscript -e 'bookdown::render_book("index.Rmd")'
           
       - name: Build redirect
         run: Rscript redirect.R
