--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -3,69 +3,69 @@ on:
      branches:
        - master
 
-env: 
+env:
   GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-  
+
 name: renderbook
 
 jobs:
   bookdown:
-    
+
     name: Render-Book
-    
+
     runs-on: ubuntu-latest
-    
+
     steps:
       - uses: actions/checkout@v1
-      
-      - uses: r-lib/actions/setup-r@v1
+
+      - uses: r-lib/actions/setup-r@v2
         with:
           crayon.enabled: 'FALSE'
           r-version: '3.6.1'
-          
+
       - uses: actions/cache@v1
         with:
           path: ~/.local/share/renv
           key: ${{ runner.os }}-renv-${{ hashFiles('**/renv.lock') }}
           restore-keys: |
             ${{ runner.os }}-renv-
-          
-      - uses: r-lib/actions/setup-pandoc@v1
-      
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
       - name: Install tinytex
-        uses: r-lib/actions/setup-tinytex@master
-      
+        uses: r-lib/actions/setup-tinytex@v2
+
       - name: Install sysreq
         run: sudo apt update && sudo apt install -y gdal-bin git-core libcairo2-dev libgdal-dev libgeos-dev libgeos++-dev libgit2-dev libpng-dev libssh2-1-dev libssl-dev libudunits2-dev libxml2-dev make pandoc pandoc-citeproc zlib1g-dev libmagick++-dev libssl-dev libsasl2-dev
-        
+
       - name: Pulling hexmake
         run: docker pull colinfay/hexmake
-        
+
       - uses: nanasess/setup-chromedriver@master
 
       - name: Install rmarkdown, bookdown and sysfonts
         run: Rscript -e 'install.packages(c("sysfonts", "rmarkdown","bookdown"), Ncpus = 4)'
-      
+
       - name: Spell check
         run: Rscript before-build-spellcheck.R
         env:
           EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
           GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
-      
+
       - name: Before build
         run: Rscript prep.R
-          
+
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-          
+
       - name: Build redirect
         run: Rscript redirect.R
-      
+
       - uses: actions/upload-artifact@v1
         with:
           name: _site
           path: _site/
-  
+
 # Need to first create an empty gh-pages branch
 # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
 # and also add secrets for a GITHUB_PAT and EMAIL to the repository
@@ -88,10 +88,9 @@ jobs:
        env:
          GITHUB_TOKEN: ${{ secrets.TOKEN }}
        with:
-         email: ${{ secrets.EMAIL }} 
+         email: ${{ secrets.EMAIL }}
          build_dir: _site  # optional
          cname: engineering-shiny.org # optional
          jekyll: no        # optional
 
-    
- 
+
