--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -13,15 +13,10 @@ jobs:
 
     name: Render-Book
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v1
-
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          crayon.enabled: 'FALSE'
-          r-version: '4.2.3'
+      - uses: actions/checkout@v4
 
       - uses: actions/cache@v1
         with:
@@ -30,7 +25,16 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-renv-
 
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+          crayon.enabled: 'FALSE'
+          r-version: '4.1.0'
+          Ncpus: 4
+
       - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-renv@v2
 
       - name: Install tinytex
         uses: r-lib/actions/setup-tinytex@v2
@@ -49,8 +53,8 @@ jobs:
       - name: Spell check
         run: Rscript before-build-spellcheck.R
         env:
-          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
-          GH_TOKEN: ${{ secrets.TOKEN }} # https://github.com/settings/tokens
+          EMAIL: ${{ secrets.EMAIL }}
+          GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Before build
         run: Rscript prep.R
