--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -58,7 +58,7 @@ jobs:
           name: _site
           path: _site/
 
-# # Need to first create an empty gh-pages branch
+# # Need to first create an empty gh-pages branch in the repository
 # # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
 # # and also add secrets for a GITHUB_PAT and EMAIL to the repository
 # # gh-action from Cecilapp/GitHub-Pages-deploy
