--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -13,7 +13,8 @@ jobs:
 
     name: Render-Book
 
-    runs-on: colinfay/engineeringshinyv1
+    runs-on: ubuntu-latest
+    container: colinfay/engineeringshinyv1
 
     steps:
       - uses: actions/checkout@v4
