ci: runs-on: ubuntu-20.04

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -13,7 +13,7 @@ jobs:
 
     name: Render-Book
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     container: colinfay/engineeringshinyv1
 
     steps:
