--- a/_output.yml
+++ b/_output.yml
@@ -1,5 +1,5 @@
-bookdown::bs4_book:
-  css: [css/style.css, css/style_gitbook.css]
+bookdown::gitbook:
+  css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
   toc_depth: 3
   config:
     toc:
@@ -10,18 +10,13 @@ bookdown::bs4_book:
         <li><a href="https://rtask.thinkr.fr">A book by the ThinkR team</a></li>
     edit:
       link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
-      text: "Edit"       
+      text: "Edit"
     sharing:
       github: true
       facebook: false
   includes:
-    in_header: ga.html      
+    in_header: ga.html
     after_body: gitbook-footer-thinkr.html
-  theme:
-    primary: "#DE633C"
-    fg: "#2b2121"
-    bg: "#ffffff"
-  repo: https://github.com/ThinkR-open/engineering-shiny-book
 bookdown::pdf_book:
   includes:
     in_header: latex/preamble.tex
