--- a/_output.yml
+++ b/_output.yml
@@ -1,19 +1,10 @@
-bookdown::gitbook:
+bookdown::bs4_book:
   css: [css/style.css, css/thinkr.css, css/style_gitbook.css]
-  toc_depth: 3
-  config:
-    toc:
-      collapse: section
-      before: |
-        <li><a href="./">Engineering Production-Grade Shiny Apps</a></li>
-      after: |
-        <li><a href="https://rtask.thinkr.fr">A book by the ThinkR team</a></li>
-    edit:
-      link: https://github.com/ThinkR-open/building-shiny-apps-workflow/edit/master/%s
-      text: "Edit"
-    sharing:
-      github: true
-      facebook: false
+  theme:
+    primary: "#DE633C"
+    fg: "#2b2121"
+    bg: "#ffffff"
+  repo: https://github.com/ThinkR-open/engineering-shiny-book
   includes:
     in_header: ga.html
     after_body: gitbook-footer-thinkr.html
