--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,6 +44,7 @@ Imports:
     chromote (>= 0.0.0.9001),
     cli (>= 2.0.2),
     cloc (>= 0.3.0),
+    hexmake (>= 0.1.4),
     config (>= 0.3),
     covr (>= 3.5.0),
     covrpage (>= 0.0.70),
@@ -89,7 +90,7 @@ Imports:
     magrittr (>= 1.5),
     matlab (>= 1.0.2),
     memoise (>= 1.1.0.9000),
-    minifyr (>= 0.0.0.9000),
+    minifyr (>= 0.0.3),
     namer (>= 0.1.5),
     nessy (>= 0.0.0.9001),
     packageMetrics2 (>= 1.0.1.9000),
@@ -128,7 +129,7 @@ Imports:
     shinyloadtest (>= 1.0.1),
     shinyMobile (>= 0.1.0),
     shinytest (>= 1.3.1),
-    skeleton (>= 0.0.0.9000),
+    skeleton (>= 0.0.0.9003),
     testthat (>= 3.0.0),
     tibble (>= 3.0.1),
     tictoc (>= 1.0),
