ci: no spellcheck for now

--- a/.github/workflows/deploy_bookdown_v2.yml
+++ b/.github/workflows/deploy_bookdown_v2.yml
@@ -49,11 +49,11 @@ jobs:
       - name: Install rmarkdown, bookdown and sysfonts
         run: Rscript -e 'install.packages(c("sysfonts", "rmarkdown","bookdown"), Ncpus = 4)'
 
-      - name: Spell check
-        run: Rscript before-build-spellcheck.R
-        env:
-          EMAIL: ${{ secrets.EMAIL }}
-          GH_TOKEN: ${{ secrets.TOKEN }}
+      # - name: Spell check
+      #   run: Rscript before-build-spellcheck.R
+      #   env:
+      #     EMAIL: ${{ secrets.EMAIL }}
+      #     GH_TOKEN: ${{ secrets.TOKEN }}
 
       - name: Before build
         run: Rscript prep.R
